corrected grid on mobile screen

--- a/style.css
+++ b/style.css
@@ -51,110 +51,6 @@ a:hover {
   transition: 0.5s;
 }
 
-/* media query for smaller screen changes navigation to menu bar */
-@media only screen and (max-width: 768px) {
-  .checkbtn {
-    display: block;
-  }
-
-  nav ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background-color: hsl(36, 74%, 63%);
-    top: 80px;
-    left: -115%;
-    text-align: center;
-    transition: all 0.5s;
-  }
-
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-
-  nav ul li a {
-    font-size: 20px;
-  }
-
-  a:hover {
-    background: none;
-    color: hsl(35, 77%, 62%);
-    transition: 0.5s;
-  }
-
-  #check:checked ~ ul {
-    left: 0;
-  }
-
-  .item1 {
-    grid-area: image;
-    background-image: url(/assets/images/image-web-3-mobile.jpg);
-    background-size: cover;
-    width: 100%;
-  }
-  .item2 {
-    grid-area: question;
-    width: 100%;
-  }
-  .item3 {
-    grid-area: information;
-    width: 100%;
-  }
-  .item4 {
-    grid-area: side;
-    background-color: black;
-    color: white;
-    width: 100%;
-    padding: 30px;
-  }
-
-  .item5 {
-    grid-area: posts;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .side-heading {
-    color: hsl(35, 77%, 62%);
-    font-size: 40px;
-  }
-
-  .side-paragraph {
-    color: hsl(233, 8%, 79%);
-  }
-
-  .question {
-    font-size: 50px;
-    font-weight: bolder;
-  }
-
-  .information {
-    color: hsl(237, 9%, 52%);
-    padding-bottom: 40px;
-  }
-
-  button {
-    background-color: hsl(5, 85%, 63%);
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-  }
-
-  .grid-container {
-    display: grid;
-    gap: 1rem;
-    grid-template-areas:
-      "image"
-      "question"
-      "information"
-      "side"
-      "post";
-  }
-}
-
 /* desktop grid */
 .item1 {
   grid-area: image;
@@ -256,4 +152,108 @@ button {
   padding: 10px 20px;
   border: none;
   cursor: pointer;
+}
+
+/* media query for smaller screen changes navigation to menu bar */
+@media (max-width: 768px) {
+  .checkbtn {
+    display: block;
+  }
+
+  nav ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: hsl(36, 74%, 63%);
+    top: 80px;
+    left: -115%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a {
+    font-size: 20px;
+  }
+
+  a:hover {
+    background: none;
+    color: hsl(35, 77%, 62%);
+    transition: 0.5s;
+  }
+
+  #check:checked ~ ul {
+    left: 0;
+  }
+
+  .item1 {
+    grid-area: image;
+    background-image: url(/assets/images/image-web-3-mobile.jpg);
+    background-size: cover;
+    width: 100%;
+  }
+  .item2 {
+    grid-area: question;
+    width: 100%;
+  }
+  .item3 {
+    grid-area: information;
+    width: 100%;
+  }
+  .item4 {
+    grid-area: side;
+    background-color: black;
+    color: white;
+    width: 100%;
+    padding: 30px;
+  }
+
+  .item5 {
+    grid-area: posts;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .side-heading {
+    color: hsl(35, 77%, 62%);
+    font-size: 40px;
+  }
+
+  .side-paragraph {
+    color: hsl(233, 8%, 79%);
+  }
+
+  .question {
+    font-size: 50px;
+    font-weight: bolder;
+  }
+
+  .information {
+    color: hsl(237, 9%, 52%);
+    padding-bottom: 40px;
+  }
+
+  button {
+    background-color: hsl(5, 85%, 63%);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
+
+  .grid-container {
+    display: grid;
+    gap: 1rem;
+    grid-template-areas:
+      "image"
+      "question"
+      "information"
+      "side"
+      "post";
+  }
 }
